hphp/hack/test/typecheck/tconst/subsume_tconst2.php.exp
File "subsume_tconst2.php", line 7, characters 7-7:
Class C does not correctly implement all required methods  (Typing[4110])
File "subsume_tconst2.php", line 7, characters 20-20:
Some methods are incompatible with those declared in type I
Read the following to see why:
File "subsume_tconst2.php", line 4, characters 23-23:
Unable to satisfy constraint on this type constant
File "subsume_tconst2.php", line 4, characters 28-35:
This is an array key (int/string)
File "subsume_tconst2.php", line 8, characters 18-22:
It is incompatible with a mixed value
